Map donne, faire le rafraichissement les X seconde

--- a/ProjetXamarinWear/Views/ItemsPage.xaml
+++ b/ProjetXamarinWear/Views/ItemsPage.xaml
@@ -9,37 +9,28 @@
              NavigationPage.HasNavigationBar="False">
 
     <StackLayout>
+        <Button Text="Rafraichir" Clicked="RefreshData" VerticalOptions="Start"/>
         <ListView x:Name="ItemsListView"
                 ItemsSource="{Binding Items}"
                 VerticalOptions="FillAndExpand"
                 HasUnevenRows="true"
-                RefreshCommand="{Binding LoadItemsCommand}"
-                IsPullToRefreshEnabled="true"
-                IsRefreshing="{Binding IsBusy, Mode=OneWay}"
-                CachingStrategy="RecycleElement"
                 ItemSelected="OnItemSelected">
-            <d:ListView.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>First Item</x:String>
-                    <x:String>Second Item</x:String>
-                    <x:String>Third Item</x:String>
-                    <x:String>Fourth Item</x:String>
-                    <x:String>Fifth Item</x:String>
-                    <x:String>Sixth Item</x:String>
-                </x:Array>
-            </d:ListView.ItemsSource>
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
                         <StackLayout Padding="10">
-                            <Label Text="{Binding Text}" 
-                                d:Text="{Binding .}"
+                            <StackLayout Orientation="Horizontal">
+                            <Label Text="Personne id : " 
+                                  FontSize="16" />
+                            <Label Text="{Binding student_id}" 
                                 LineBreakMode="NoWrap" 
                                 Style="{DynamicResource ListItemTextStyle}" 
                                 FontSize="16" />
-                            <Label Text="{Binding Description}" 
-                                d:Text="Item description"
-                                LineBreakMode="NoWrap"
+                            </StackLayout>
+                             <Label Text="Message " 
+                                  FontSize="16" />
+                            <Label Text="{Binding student_message}"                             
+                                LineBreakMode="TailTruncation"
                                 Style="{DynamicResource ListItemDetailTextStyle}"
                                 FontSize="13" />
                         </StackLayout>
