--- a/ProjetXamarinWear/Views/MainPage.xaml
+++ b/ProjetXamarinWear/Views/MainPage.xaml
@@ -26,7 +26,7 @@
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:AboutPage />
+                <views:MapPage />
             </x:Arguments>
         </NavigationPage>
     </TabbedPage.Children>
